fixed potential issues, aligned naming, added initialisations
ToDo: documented code sections

--- a/web/assets/map.css
+++ b/web/assets/map.css
@@ -3,6 +3,19 @@ html, body {
 }
 
 
+@media (min-width: 1281px) {
+  #header {
+    padding: 0 12px;
+  }
+}
+
+@media (max-width: 1280px) {
+  #header {
+    padding: 0 4px;
+  }
+}
+
+
 .indicator-scrollable-toright, .indicator-scrollable-toleft {
   position: relative;
 }
@@ -51,6 +64,7 @@ form:first-of-type, .formparts:first-of-type {
   padding-left: 5px;        /* padding instead of margin lets area act as hit area */
 }
 
+
 .slider-container {
   vertical-align: middle;
   display: inline-block;
@@ -82,6 +96,10 @@ input[type="radio"] , input[type="checkbox"]{
 
 input:not([type=text]), button, label[for] {
   cursor: pointer;
+}
+
+input[disabled]:hover {
+  cursor: url(../images/there.cur), auto;
 }
 
 
@@ -125,6 +143,7 @@ input:not([type=text]), button, label[for] {
 
 #interactionParent {
   display: flex;
+  perspective: 1000px;
 }
 
 #interactionParent[disabled] {
@@ -171,20 +190,48 @@ input:not([type=text]), button, label[for] {
 
 #mapcontainer {
   flex: 1 0;
-}
-
-#map {
-  opacity: 0;
-  transform: scale(.9);
-}
-
-.withtransition {
-  transition: opacity 1s cubic-bezier( 0, 1, 0.4, 1 ), transform .5s cubic-bezier( 0, 1, 0.4, 1 );
-}
-
-#map.shown {
+  transform-style: preserve-3d;
+  position: relative;
   opacity: 1;
   transform: scale(1);
+}
+
+#mapcontainer.initially {
+  opacity: 0;
+}
+
+.transition {
+  transition: transform 2s linear;
+}
+
+@keyframes clearview {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.transition::after {
+  animation: clearview 1s 2s both;
+  content: "";
+  display: block;
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  transform: translate3d(0px, 0px, 400px);
+  border-radius: 50%;
+  opacity: 0;
+  pointer-events: none;
+  background: linear-gradient(135deg, rgba(255,255,255,0) 0%, rgba(255,150,255,.13) 74%, rgba(255,0,255,.5) 100%);
+}
+
+#mapcontainer.toshow {
+  transform: scale3d(.25,.25,.25) rotate3d(0, 1, 0, -80deg) rotate3d(1, 0, 0, 86deg) rotate3d(0, 0, 1, 30deg);
 }
 
 
